--- a/constraints.ucf
+++ b/constraints.ucf
@@ -10,7 +10,10 @@
 	 ######################################################################################################################                                               LEDs                                                                  #
 ###################################################################################################################### 
 
-   NET "LED1"              LOC = P15  | IOSTANDARD = LVCMOS33 | DRIVE = 8 | SLEW = FAST ;
+    NET "LED1"                     LOC = P15     | IOSTANDARD = LVCMOS33 | DRIVE = 8 | SLEW = FAST ;  
+    NET "LED2"                     LOC = P16     | IOSTANDARD = LVCMOS33 | DRIVE = 8 | SLEW = FAST ;  
+    NET "SWITCH1"                  LOC = K18     | IOSTANDARD = LVCMOS33 | DRIVE = 8 | SLEW = FAST | PULLUP; #SW6
+    NET "SWITCH2"                  LOC = K17     | IOSTANDARD = LVCMOS33 | DRIVE = 8 | SLEW = FAST | PULLUP; #SW5
     
 	 
 	 
